force-app/main/default/objects/mcdm_15__QuickSendJourney__c/mcdm_15__QuickSendJourney__c.object-meta.xml
<CustomObject>
    <label>Quick Send Message</label>
    <nameField>
        <displayFormat>DM-QSJN-{00000}</displayFormat>
        <label>Quick Send Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Send Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>