force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__DM_Approval_Mode__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Approval_Mode__c</fullName>
    <label>DM Approval Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mcdm_15__DM_Approval_Setting_values</valueSetName>
    </valueSet>
</CustomField>