force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__DM_Manual_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Manual_Approval_Threshold__c</fullName>
    <description>Defines the number of recipients in a send which will trigger manual approval</description>
    <label>DM Manual Approval Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>