force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__DM_Tracking_Version__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Tracking_Version__c</fullName>
    <description>Last known journey version that was validated for DM engagement tracking</description>
    <label>Engagement Tracking Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>