force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__Enabled_For_DM_Tracking__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Enabled_For_DM_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the current logged version is enabled for DM engagement tracking.</description>
    <label>Enabled for Engagement Tracking</label>
    <type>Checkbox</type>
</CustomField>