force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__EndDate__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__EndDate__c</fullName>
    <description>The end date and time of the Quick Send Message</description>
    <inlineHelpText>クイック送信ジャーニーの終了日時</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>