force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__JourneyName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__JourneyName__c</fullName>
    <description>Name of the Journey in Marketing Cloud</description>
    <label>Message Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>