force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__PersonalizationDeId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__PersonalizationDeId__c</fullName>
    <description>Id of the Personalization Data Extension.</description>
    <label>Personalization DataExtension Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>