force-app/main/default/objects/mcdm_15__QuickSendJourney__c/fields/mcdm_15__StartDate__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__StartDate__c</fullName>
    <description>The start date and time of the Quick Send Journey</description>
    <inlineHelpText>クイック送信ジャーニーの開始日時</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>