force-app/main/default/objects/mcdm_15__QuickSendJourney__c/validationRules/mcdm_15__mcdm_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>mcdm_15__mcdm_date_validation</fullName>
    <active>true</active>
    <description>This validates the end date is not before the start date on the quick send message record.</description>
    <errorConditionFormula>mcdm_15__EndDate__c &lt;  mcdm_15__StartDate__c</errorConditionFormula>
    <errorDisplayField>mcdm_15__StartDate__c</errorDisplayField>
    <errorMessage>The quick send message end date should not be before the start date.</errorMessage>
</ValidationRule>